fixing navbar mobile menu, adding backdrop and its functionality. changing z-index

--- a/src/components/menu/MenuButton.module.css
+++ b/src/components/menu/MenuButton.module.css
@@ -2,6 +2,7 @@
     display: inline;
     padding: 0.2rem;
     flex-grow: 1rem;
+    z-index: 10;
 }
 
 @media screen and (min-width:720px) {
