--- a/src/components/menu/NavLinks.module.css
+++ b/src/components/menu/NavLinks.module.css
@@ -14,6 +14,7 @@
      background-color: rgba(40, 41, 61, 0.8);
      backdrop-filter: blur(3px);
      transition: ease-in 0.2s;
+     z-index: 10;
  }
 
  .navBarButtonsContainerActiveLightTheme {
